# python-eventemitter

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
docs/: api.md  conf.py  index.md  index.rst
docs/api/: eventemitter.rst  index.rst
eventemitter/: __init__.py  collections.py  eventemitter.py  events.py  handlers.py  protocol.py  types.py  utils.py
eventemitter/asyncio/: __init__.py  eventemitter.py
eventemitter/core/: __init__.py  eventemitter.py  events.py  executor.py
tests/: conftest.py  test_asyncio_eventemitter.py  test_emit.py  test_errors.py  test_event_new_listener.py  test_event_remove_listener.py  test_eventemitter.py  test_events.py  test_inheritance.py  test_listeners.py  test_once.py  test_prepend.py  test_remove_all_listeners.py  test_remove_listener.py  utils.py
tests/asyncio/: test_emit.py  test_errors.py  test_event_new_listener.py  test_event_remove_listener.py  test_events.py  test_inheritance.py  test_listeners.py  test_once.py  test_prepend.py  test_remove_all_listeners.py  test_remove_listener.py
