[metadata]
name = python-eventemitter
version = attr: eventemitter.__version__
description = A Python port of Node.js EventEmitter
author = Jonghwan Hyeon
author_email = jonghwanhyeon93@gmail.com
url = https://github.com/jonghwanhyeon/python-eventemitter
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    event
    eventemitter
    node
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    typing_extensions
python_requires = >=3.7
packages = find: