[metadata]
name = python-eventemitter
version = attr: eventemitter.__version__
description = A Python port of Node.js EventEmitter that supports both synchronous and asynchronous event execution
author = Jonghwan Hyeon
author_email = jonghwanhyeon93@gmail.com
url = https://github.com/jonghwanhyeon/python-eventemitter
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    eventemitter
    event
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    typing-extensions
python_requires = >=3.7
packages = find:

[options.extras_require]
tests =
    pytest
docs =
    black
    griffe-generics
    griffe-modernized-annotations
    mkdocs
    mkdocs-material
    mkdocstrings[python]
dev =
    %(tests)s
    %(docs)s
    mypy
    rich
    ruff